--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -13,7 +13,7 @@ $breakpoints: (
 );
 
 // Root font-sizes for each breakpoint. Set to half desired line-height of body text.
-// Make sure to have as many sizes as breakpoints above.
+// ! Make sure to have as many sizes as breakpoints above.
 $rootsizes: (
   rootsize-0: 12,   // 24px line-height body text
   rootsize-1: 14,   // 28px line-height body text
@@ -22,12 +22,16 @@ $rootsizes: (
   rootsize-4: 18    // 36px line-height body text
 );
 
-// Control the line-length with max-width values for the container. Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
-$maxwidth-0: #{500 / map-get($rootsizes, rootsize-0)}rem; // 500px wide
-$maxwidth-1: #{550 / map-get($rootsizes, rootsize-1)}rem; // 550px wide
-$maxwidth-2: #{600 / map-get($rootsizes, rootsize-2)}rem; // 600px wide
-$maxwidth-3: #{680 / map-get($rootsizes, rootsize-3)}rem; // 650px wide
-$maxwidth-4: #{750 / map-get($rootsizes, rootsize-4)}rem; // 720px wide
+// Control the line-length with max-width values for the container.
+// Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
+// ! Make sure to have as many widths as breakpoints above.
+$maxwidths: (
+  maxwidth-0: 500,  // 500px wide
+  maxwidth-1: 550,  // 550px wide
+  maxwidth-2: 600,  // 600px wide
+  maxwidth-3: 680,  // 680px wide
+  maxwidth-4: 750   // 750px wide
+);
 
 // Add typefaces here.
 $serif: "edita", Georgia, Times, serif;
