--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,3 +10,22 @@
 
 // Import all SCSS modules with Sass globbing.
 @import "modules/*";
+
+.baseline .container {
+  background: -webkit-linear-gradient(top,rgba(51, 51, 51, 0.2)0,rgba(51, 51, 51, 0.2)1px,rgba(255, 255, 255, 0)1px,rgba(255, 255, 255, 0)2px);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0px,rgba(51,51,51,.2)),color-stop(1px,rgba(51,51,51,.2)),color-stop(1px,rgba(255,255,255,0)),color-stop(2px,rgba(255,255,255,0)));
+  background: linear-gradient(to bottom,rgba(51, 51, 51, 0.2)0,rgba(51, 51, 51, 0.2)1px,rgba(255, 255, 255, 0)1px,rgba(255, 255, 255, 0)2px);
+  background-size: 100% #{map-get($rootsizes, rootsize-0)}px;
+  @include breakpoint(break-1) {
+    background-size: 100% #{map-get($rootsizes, rootsize-1)}px;
+  }
+  @include breakpoint(break-2) {
+    background-size: 100% #{map-get($rootsizes, rootsize-2)}px;
+  }
+  @include breakpoint(break-3) {
+    background-size: 100% #{map-get($rootsizes, rootsize-3)}px;
+  }
+  @include breakpoint(break-4) {
+    background-size: 100% #{map-get($rootsizes, rootsize-4)}px;
+  }
+}
